--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/adminCharacter.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/adminCharacter.html
@@ -1,4 +1,4 @@
-﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2">
+﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2" ng-controller="adminCharacterController as vm">
 
     <input type="text" class="form-control" value="{{characterName}}" ng-model="characterName" />
     <span class="glyphicon glyphicon-floppy-disk" ng-click="saveChanges()"></span>
