--- a/KuroganeHammer.Web/KuroganeHammer.Web/app/views/adminNewCharacter.html
+++ b/KuroganeHammer.Web/KuroganeHammer.Web/app/views/adminNewCharacter.html
@@ -1,7 +1,5 @@
 ﻿<div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-md-offset-2">
 
-    <!--<span class="glyphicon glyphicon-floppy-disk" ng-click="saveChanges()"></span>-->
-
     <div class="container fade-in two">
 
         <h4>Basic info:</h4>
@@ -26,10 +24,6 @@
         </div>
 
         <div style="text-align:center">
-            <!--<img ng-src="{{mainImageUrl}}"
-                 alt="{{characterName}}" style="margin:auto" />
-            <br />
-            <br />-->
             <br />
             <br />
             <input type="button" ng-click="showMovementRow()" value="Add new movement stat" />
@@ -114,9 +108,6 @@
                         <td>
                             <input type="text" class="form-control" ng-model="newMoveStat.knockbackGrowth" />
                         </td>
-                        <!--<td>
-                            <input type="text"class="form-control"value="{{item.type}}" ng-model="item.type" />
-                        </td>-->
                         <td>
                             <input type="text" class="form-control" ng-model="newMoveStat.landingLag" />
                         </td>
@@ -133,43 +124,39 @@
                 <thead>
                     <tr>
                         <th title="Name">
-                            <a href="" ng-click="order('name')">Name</a>
+                            <a href="">Name</a>
                             <span ng-show="predicate === 'name'" ng-class="{reverse:reverse}"></span>
                         </th>
                         <th title="HitboxActive">
-                            <a href="" ng-click="order('hitboxActive')">HitboxActive</a>
+                            <a href="">HitboxActive</a>
                             <span ng-show="predicate === 'hitboxActive'" ng-class="{reverse:reverse}"></span>
                         </th>
                         <th title="First Actionable Frame">
-                            <a href="" ng-click="order('firstActionableFrame')">FAF</a>
+                            <a href="">FAF</a>
                             <span ng-show="predicate === 'firstActionableFrame'" ng-class="{reverse:reverse}"></span>
                         </th>
                         <th title="Base Damage" nowrap>
-                            <a href="" ng-click="order('baseDamage')">Base Dmg. (+SD)</a>
+                            <a href="">Base Dmg. (+SD)</a>
                             <span ng-show="predicate === 'baseDamage'" ng-class="{reverse:reverse}"></span>
                         </th>
                         <th title="Angle">
-                            <a href="" ng-click="order('angle')">Angle</a>
+                            <a href="">Angle</a>
                             <span ng-show="predicate === 'angle'" ng-class="{reverse:reverse}"></span>
                         </th>
                         <th title="BaseKnockBack/SetKnockback">
-                            <a href="" ng-click="order('baseKnockBackSetKnockback')">BKB/WBKB</a>
+                            <a href="">BKB/WBKB</a>
                             <span ng-show="predicate === 'baseKnockBackSetKnockback'" ng-class="{reverse:reverse}"></span>
                         </th>
                         <th title="Knockback Growth">
-                            <a href="" ng-click="order('knockbackGrowth')">KBG</a>
+                            <a href="">KBG</a>
                             <span ng-show="predicate === 'knockbackGrowth'" ng-class="{reverse:reverse}"></span>
                         </th>
-                        <!--<th>
-                            <a href="" ng-click="order('type')">Type</a>
-                            <span ng-show="predicate === 'type'" ng-class="{reverse:reverse}"></span>
-                        </th>-->
                         <th title="Landing Lag">
-                            <a href="" ng-click="order('landingLag')">LandingLag</a>
+                            <a href="">LandingLag</a>
                             <span ng-show="predicate === 'landingLag'" ng-class="{reverse:reverse}"></span>
                         </th>
                         <th title="Auto Cancel">
-                            <a href="" ng-click="order('autoCancel')">AutoCancel</a>
+                            <a href="">AutoCancel</a>
                             <span ng-show="predicate === 'autoCancel'" ng-class="{reverse:reverse}"></span>
                         </th>
                     </tr>
@@ -197,9 +184,6 @@
                         <td>
                             <input type="text" class="form-control" value="{{item.knockbackGrowth}}" ng-model="item.knockbackGrowth" />
                         </td>
-                        <!--<td>
-                            <input type="text"class="form-control"value="{{item.type}}" ng-model="item.type" />
-                        </td>-->
                         <td>
                             <input type="text" class="form-control" value="{{item.landingLag}}" ng-model="item.landingLag" />
                         </td>
